--- a/oais/index.htm
+++ b/oais/index.htm
@@ -37,7 +37,17 @@
 <!-- Page content goes inside the article div -->
   <div id="article">
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter.  -->
-  <h1 class="title">Features of Self Destructing Systems </h1>
+  <h1 class="title">The Curatorial Viewpoint and Open Archival Information Systems</h1>
+  <p>There may be different motivations for developing and maintaining a city model.  In some concepts, it may make sense to treat a city model as a one-time snapshot that may be licensed and formatted for viewing in a special software product for a short period of time. Other motivations and technologies call for an approach that treats the city model as an on-going enterprise that may spin-off city model snapshots and systematic updates to a variety of software platforms.  the citySchema architecture is oriented toward to latter scenario.  
+  <p>Snapshot models, such as LIDAR-based mesh models are definitely valuable and relatively simple to maintain.  But these models are not useful (yet) for inserting models of future scenarios or for 
+  
+    <p>An interest in the on-going management of a collection of 3D model assets; and in the long-term viability of model collection that is not dependent on a single proprietary software environment requires a mind-set that is not necessarily a given in the world of municipal GIS.
+  
+  <h2>Continuity and its Shadow</h2>
+  <p>We invest a lot of time and care in the debelopment of
+
+
+  
   <ul>
     <li>Depend on circumstances beyond the control of some future user.
     <br>e.g. Licensed software that locks you out if you don;t have proper authentication or on-going support. 
