--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -38,6 +38,10 @@
   <div id="article">
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter.  -->
   <h1 class="title">What's New: Recent Updates and New Resources </h1>
+
+  <h2>June 22, 2023: Tools and Tasks 4.2</h2>
+  <p>Now featuring new tools and tasks for exporting multipatch to OBJ ModelStore and from ModelStore to Multipatch.  These are embedded into new geoprocessing models in a <b>Validate Models</b> task found in the <b>Import Models</b> task group. 
+  </p>
   <h2>April 28, 2023:  Slides presented at the MIT Conference on Digital Humanities</h2>
   <a href="../slideshow/MIT_DigitalHumanities_20230428.pdf" target="sidecar">MIT_DigitalHumanities_20230428.pdf</a>
 
