--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -40,8 +40,10 @@
   <h1 class="title">What's New: Recent Updates and New Resources </h1>
 
   <h2>June 22, 2023: Tools and Tasks 4.2</h2>
-  <p>Now featuring new tools and tasks for exporting multipatch to OBJ ModelStore and from ModelStore to Multipatch.  These are embedded into new geoprocessing models in a <b>Validate Models</b> task found in the <b>Import Models</b> task group. 
-  <a href="http://www.pbcgis.com/tmp/Bos3d_Tools_4.2_20230627.zip">Download Bos3d_Tools_4.2_20230627.zip </a></p>
+  <ul>
+  <li>Now featuring new tools and tasks for exporting multipatch to OBJ ModelStore and from ModelStore to Multipatch.  These are embedded into new geoprocessing models in a <b>Validate Models</b> task found in the <b>Import Models</b> task group. 
+  <li>The <b>Tasks</b> folder has been moved from the ModelMgt/ArcDocs folder to ModelMgt/Tools/Tasks where you will find the latest <b>Manage_Model_Collection_4.2.esriTasks</b> which you should install, along with the latest ModelMgt 
+  <li><a href="http://www.pbcgis.com/tmp/Bos3d_Tools_4.2_20230627.zip">Download Bos3d_Tools_4.2_20230627.zip </a>
   <h2>April 28, 2023:  Slides presented at the MIT Conference on Digital Humanities</h2>
   <a href="../slideshow/MIT_DigitalHumanities_20230428.pdf" target="sidecar">MIT_DigitalHumanities_20230428.pdf</a>
 
