modified:   whatsnew/index.htm

--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -42,9 +42,11 @@
   <h2>June 22, 2023: Tools and Tasks 4.2</h2>
   <ul>
   <li>Now featuring new tools and tasks for exporting multipatch to OBJ ModelStore and from ModelStore to Multipatch.  These are embedded into new geoprocessing models in a <b>Validate Models</b> task found in the <b>Import Models</b> task group. 
-  <li>The <b>Tasks</b> folder has been moved from the ModelMgt/ArcDocs folder to ModelMgt/Tools/Tasks where you will find the latest <b>Manage_Model_Collection_4.2.esriTasks</b> which you should install, along with the latest ModelMgt 
   <li><a href="http://www.pbcgis.com/tmp/Bos3d_Tools_4.2_20230627.zip">Download Bos3d_Tools_4.2_20230627.zip </a>
-  <h2>April 28, 2023:  Slides presented at the MIT Conference on Digital Humanities</h2>
+  <li>The <b>Tasks</b> folder has been moved from the ModelMgt/ArcDocs folder to ModelMgt/Tools/Tasks where you will find the latest <b>Manage_Model_Collection_4.2.esriTasks</b> which you should install in your <b>ModelMgtBPDA_20230512v7b</b> workspace, along with the latest ModelMgt toolbox.  
+  </ul>
+  
+    <h2>April 28, 2023:  Slides presented at the MIT Conference on Digital Humanities</h2>
   <a href="../slideshow/MIT_DigitalHumanities_20230428.pdf" target="sidecar">MIT_DigitalHumanities_20230428.pdf</a>
 
   <h2>Release 4.0.1 March 14 2023</h2>
