--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -39,6 +39,10 @@
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter.  -->
   <h1 class="title">What's New: Recent Updates and New Resources </h1>
 
+  <h2>June 29, 2023: Tools and Tasks 4.2.1</h2>
+  <ul>
+  <li>Fixed issue with FME Import and Export of OBJ models.  Requires installation of updated tasks and ModelMgt toolbox from this download. a href="http://www.pbcgis.com/tmp/Bos3d_ToolsTaks_4.2.1_20230629.zip">Download Bos3d_ToolsTaks_4.2.1_20230629.zip </a>
+
   <h2>June 22, 2023: Tools and Tasks 4.2</h2>
   <ul>
   <li>Now featuring new tools and tasks for exporting multipatch to OBJ ModelStore and from ModelStore to Multipatch.  These are embedded into new geoprocessing models in a <b>Validate Models</b> task found in the <b>Import Models</b> task group. 
