--- a/mmgt_validate/index.htm
+++ b/mmgt_validate/index.htm
@@ -4,7 +4,7 @@
 <!-- Hi Folks, this is the template file for pages in the citySchema.org documentation library -->
 <head> <!-- Edit the following for each page -->
     <title>Model Validation, Repair and Open Formats</title>
-    <meta name="description" content="Home page for the citySchema project.  A gateway for tools, techniques and documentation about cross-disciplinary collaboration on city models. ">
+    <meta name="description" content="Procedures for ensuring the integrity and interoperability of each asset in the model collection.  ">
     <meta name="keywords" content="City Modeling, Digital Humanities, Geography">
     <meta name="author" content="Paul B. Cote">
     
