modified:   whatsnew/index.htm

--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -39,6 +39,13 @@
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter.  -->
   <h1 class="title">What's New: Recent Updates and New Resources </h1>
 
+
+  <h2>July 3, 2023: New Docs and Tools and Tasks 4.2.2</h2>
+  <ul>
+    <li>Major updates to documentation for <a href="../mmgt_import/index.htm">Importing models</a> and <a href="mmgt_validate\index.htm">Models Repair and Validation</a>
+    <li>Release of Tools and Tasks v4.2.2 makes adjustment to the model validation tools and tasks that make it simpler to accomplish the workflow using just the FME workbenches. 
+</ul>
+
   <h2>June 29, 2023: Tools and Tasks 4.2.1</h2>
   <ul>
   <li>Fixed issue with FME Import and Export of OBJ models.  Requires installation of updated tasks and ModelMgt toolbox from this download. <a href="http://www.pbcgis.com/tmp/Bos3d_ToolsTaks_4.2.1_20230629.zip">Download Bos3d_ToolsTaks_4.2.1_20230629.zip </a>
