modified:   mmgt_import/images/model_batch.jpg 	modified:   mmgt_import/index.htm

--- a/mmgt_import/index.htm
+++ b/mmgt_import/index.htm
@@ -46,6 +46,10 @@
     <figure class="right">
       <img src="./images/import_tasks.jpg">
       <figcaption>Tasks for Importing and Enrolling Models.</figcaption>
+      <br>
+        <img  src="./images/model_batch.jpg">
+        <figcaption>Model sources are stored in Dated ModelBatch folders.</figcaption>
+      </figure>
     </figure>
     <ul>
       <li>A ModelBatch workspace folder is prepared as the production cell for transforming the models and for preserving associated source data and procedures. 
