modified:   whatsnew/index.htm

--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -44,6 +44,7 @@
   <ul>
     <li>Major updates to documentation for <a href="../mmgt_import/index.htm">Importing models</a> and <a href="mmgt_validate\index.htm">Models Repair and Validation</a>
     <li>Release of Tools and Tasks v4.2.2 makes adjustment to the model validation tools and tasks that make it simpler to accomplish the workflow using just the FME workbenches. 
+    <li>Download <a href="http:\\www.pbcgis.com\tmp\Bos3d_ToolsTasks_4.2.2_20230703.zip">Bos3d_ToolsTasks_4.2.2_20230703.zip</a> here.
 </ul>
 
   <h2>June 29, 2023: Tools and Tasks 4.2.1</h2>
