modified:   whatsnew/index.htm

--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -38,7 +38,12 @@
   <div id="article">
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter.  -->
   <h1 class="title">What's New: Recent Updates and New Resources </h1>
-
+  <h2>July 7, 2023: New Beta FME Workbench</h2>
+  <ul>
+    <li>A new version of the FME Workbench,<b>Multipatch2ModelStore.fmw</b> seems to fix the problem with smoothed vertex normals on UDTG models. 
+    <li><a href="http://www.pbcgis.com/tmp/Multipatch2ModelStoreFlatten.zip">Download Multipatch2ModelStoreFlatten.zip</a>
+    </ul>
+    
 
   <h2>July 3, 2023: New Docs and Tools and Tasks 4.2.2</h2>
   <ul>
