modified:   mmgt_validate/index.htm

--- a/mmgt_validate/index.htm
+++ b/mmgt_validate/index.htm
@@ -72,8 +72,9 @@
 <hr>
 
 <h2>Using the Multipatch to ModelStore Model Store Workbench</h2>
-<p>The <b>Multipatch2ModelStore.fmw</b> does the following things:</p>
+
 <ol>
+  <li>To begin, you need a sub-folder in your batch named ModelStore.  If you have one already that has log files and an OBJ folder, then delete these just have an empty ModelStore Folder. 
   <li>The user specifies an <b>Input Geodatabase</b> that must contain a multipatch feature class as described below.
   <li>The user selects a multipatch feature class name frm a pick-list.  The feature class must conform the current model schema (version 4).  The input feature class must have one of the following names:
     <ul>
