--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -38,6 +38,15 @@
   <div id="article">
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter.  -->
   <h1 class="title">What's New: Recent Updates and New Resources </h1>
+  
+  <h2>CitySchema featured at at Symposium on Spatiotemporal Data Science</h2>
+    
+    <ul>
+      <li>Harvard Center for Geographic Analysis. July 15-16, 2023
+      <li><a href="http://www.pbcgis.com/presentations/pbcote_cga_geotemporal_20230712.pdf" target="pdf">Download or Preview PDF</a>
+    </ul>
+    
+  
   <h2>July 7, 2023: New Beta FME Workbench</h2>
   <ul>
     <li>A new version of the FME Workbench,<b>Multipatch2ModelStore.fmw</b> seems to fix the problem with smoothed vertex normals on UDTG models. 
