modified:   whatsnew/index.htm

--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -39,8 +39,14 @@
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter.  -->
   <h1 class="title">What's New: Recent Updates and New Resources </h1>
   
-  <h2>CitySchema featured at at Symposium on Spatiotemporal Data Science</h2>
-    
+<h2>July 19, 2023: Fixed Toolbox Release 4.2.2.1</h2>
+<ul>
+  <li>Fixed Model <b>2g: TakeName and Project ID from A80 Parcels</b>
+  <li>Download <a href="http://www.pbcgis.com/tmp/Bos3d_ModelMgt_4.2.2.1_20230719.zip">Bos3d_ModelMgt_4.2.2.1_20230719.zip</a>
+  </ul>
+
+
+  <h2>July 16, 2023: CitySchema invited to present at at Harvard Symposium on Spatiotemporal Data Science</h2>
     <ul>
       <li>Harvard Center for Geographic Analysis. July 15-16, 2023
       <li><a href="http://www.pbcgis.com/presentations/pbcote_cga_geotemporal_20230714.pdf" target="pdf">Download or Preview PDF</a>
