modified:   mmgt_layers/index.htm 	new file:   mmgt_webscenes/index.htm 	modified:   resources/cityschema_includes.js 	modified:   whatsnew/index.htm

--- a/mmgt_webscenes/index.htm
+++ b/mmgt_webscenes/index.htm
@@ -34,11 +34,20 @@
 <!-- Page content goes inside the article div -->
 <div id="article">
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter. -->
-    <h1 class="title">Layers and Pop-Ups and Web Scenes</h1>
+    <h1 class="title">Web Scenes</h1>
 
 <p><i>This page is under construction</i>
 
-<p>Visually presenting and sorting subsets of the building model collection is a necessary aspect of most city model applications. The citySchema Model Management workspace provides a style palette for coloring models according to status that provides a familiar, intuitive legend for quickly understanding the status of building models.  This pallette is used for every visualization of building models on all platforms.
+<p>Update of of Web feature layers and web scenes may be one of the most frequent activities of managing the model collection.   There are web scenes for the public and internal visualization and a web feature layers issued for ArcGIS Urban applications. There is also a web scene for the model download page. Each of these has a special selection of models, and application-specific styling for model colors and pop-ups.
+<p> Because of the frequency that these web-scenes may be updated, it is handy that they are produced directly form the <b>Stage</b> collection so that they web scenes can reflect the latest changes made within stage.  The ModelMg Tasks under the heading <b>Produce WebScene Snapshot Editions</b> provides access to tools and resources for producing scene layer packages with all of the selection and styling that has been composed using ArcGIS Pro layer files and Look-up tables. 
+<p>Understanding how all of this works, it may be helpful to start at the end-product.
+  
+  
+  
+  The basic workflow consists of the following steps:
+
+
+
 <ul>
   <li><a href="https://boston.maps.arcgis.com/home/webscene/viewer.html?webscene=868b33a92f87408da58ffeb8c1cd1d70" target="agol">Visit the public web-scene demo</a> 
   <li>Note the way that the Radio buttons work and how the legend does not contain a lot of excess values.
