--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -48,8 +48,8 @@
 
   <h2>July 16, 2023: CitySchema invited to present at at Harvard Symposium on Spatiotemporal Data Science</h2>
     <ul>
-      <li>Harvard Center for Geographic Analysis. July 15-16, 2023
-      <li><a href="http://www.pbcgis.com/presentations/pbcote_cga_geotemporal_20230714.pdf" target="pdf">Download or Preview PDF</a>
+      <li><a href="https://drive.google.com/file/d/1hDW44ZzoJUqDRID_c0mLQ3joB2diPz6L/view" target="outboard">Harvard Center for Geographic Analysis. July 15-16, 2023</a>
+      <li><a href="http://www.pbcgis.com/presentations/pbcote_cga_geotemporal_20230714.pdf" target="outboard">Download or Preview PDF</a>
     </ul>
     
   
