--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -39,6 +39,17 @@
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter.  -->
   <h1 class="title">What's New: Recent Updates and New Resources </h1>
   
+  <h2>August 14, 2023: Released Tools and Tasks V 5.0</h2>
+  <ul>
+    <li>Toolbox upgraded to newatbx format ( version 3.0 )
+    <li>All Tools and tasks checked and repaired for compatibility with eachother in ArcGIS pro version 3.1.2
+    <li>Lots of tweaks to tasks to update prompts for clarity and accuracy with latest workflows. 
+    <li>Brand new functionality for producing and updating Public and INternal web scenes and web feature layers for ArcGIS Urban.
+    <li>Download the updates at <a href="http://www.pbcgis.com/tmp/Bos3dModelMgt_ToolsTasks_5.0_20230814.zip">Bos3dModelMgt_ToolsTasks_5.0_20230814.zip</a> 
+    <li>Follow the instructions in the readme.txt file included in the zip file.
+  </ul>
+
+
 <h2>July 19, 2023: Fixed Toolbox Release 4.2.2.1</h2>
 <ul>
   <li>Fixed Model <b>2g: TakeName and Project ID from A80 Parcels</b>
