modified:   mmgt_webscenes/index.htm

--- a/mmgt_webscenes/index.htm
+++ b/mmgt_webscenes/index.htm
@@ -36,7 +36,7 @@
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter. -->
     <h1 class="title">Web Scenes</h1>
 
-<p><i>This page is under construction</i>
+<p><i>This page is under construction</i> Last update August 14 at 3:00 pm/
 
 <p>Update of of Web feature layers and web scenes may be one of the most frequent activities of managing the model collection.   There are web scenes for the public and internal visualization and a web feature layers issued for ArcGIS Urban applications. There is also a web scene for the model download page. Each of these has a special selection of models, and application-specific styling for model colors and pop-ups.
 <p> Because of the frequency that these web-scenes may be updated, it is handy that they are produced directly form the <b>Stage</b> collection so that they web scenes can reflect the latest changes made within stage.  The ModelMg Tasks under the heading <b>Produce WebScene Snapshot Editions</b> provides access to tools and resources for producing scene layer packages with all of the selection and styling that has been composed using ArcGIS Pro layer files and Look-up tables. 
