--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -39,6 +39,13 @@
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter.  -->
   <h1 class="title">What's New: Recent Updates and New Resources </h1>
   
+  <h2>August 15, 2023: Posted Complete Demo Project for preview of  Tools and Tasks V 5.0</h2>
+  <ul>
+    <li>Download the new demo workspace <a href="http://www.pbcgig.com/tmp/ModelMgt_Demo_v5beta_20230815.zip">ModelMgt_Demo_v5beta_20230815.zip</a>
+    <li>Unzip in your personal Bos3d_Dev_yourinitials folder and open the arcdocs/ModelMgt.aprx file.
+  </ul>
+
+
   <h2>August 14, 2023: Released Tools and Tasks V 5.0</h2>
   <ul>
     <li>Toolbox upgraded to newatbx format ( version 3.0 )
