modified:   whatsnew/index.htm

--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -41,7 +41,7 @@
   
   <h2>August 15, 2023: Posted Complete Demo Project for preview of  Tools and Tasks V 5.0</h2>
   <ul>
-    <li>Download the new demo workspace <a href="http://www.pbcgig.com/tmp/ModelMgt_Demo_v5beta_20230815.zip">ModelMgt_Demo_v5beta_20230815.zip</a>
+    <li>Download the new demo workspace <a href="http://www.pbcgis.com/tmp/ModelMgt_Demo_v5beta_20230815.zip">ModelMgt_Demo_v5beta_20230815.zip</a>
     <li>Unzip in your personal Bos3d_Dev_yourinitials folder and open the arcdocs/ModelMgt.aprx file.
   </ul>
 
