--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -38,7 +38,15 @@
   <div id="article">
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter.  -->
   <h1 class="title">What's New: Recent Updates and New Resources </h1>
-  
+
+  <h2>August 28, 2023: New version of Tools and Tasks V 5.0.1</h2>
+  <ul>
+    <li>For testing the ArcPy wrappers for FMEObjects.  I recommend using these in your demo workspace for testing. 
+    <li>Download new tools folder.  Includes Tasks and new Toolbox <a href="http://www.pbcgis.com/tmp/Bos3dModelMgt_ToolsTasks_v5.0.1_20230828.zip.zip">Bos3dModelMgt_ToolsTasks_v5.0.1_20230828.zip</a>
+    <li>Unzip and replace tools folder in your ModelMgt_Demo workspace and re-install your tasks.
+  </ul>
+
+
   <h2>August 15, 2023: Posted Complete Demo Project for preview of  Tools and Tasks V 5.0</h2>
   <ul>
     <li>Download the new demo workspace <a href="http://www.pbcgis.com/tmp/ModelMgt_Demo_v5beta_20230815.zip">ModelMgt_Demo_v5beta_20230815.zip</a>
